1 show more time fix(when showmore, lastupdateposition=0) 2.press enter send,ctrl/shift enter line break

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{color:#333;background:#a7ab8c;font:12px/1.5 \5b8b\4f53;}
 
 #msgBox{width:500px;height:700px; background:#fff;border-radius:5px;margin:10px auto;padding-top:10px;}
 .messagewindow{padding:10px; width: 480px; height:500px;overflow-y: scroll;}
-.chatform{padding:0 20px 20px; width: 460px; height:150px}
+.chatform{padding:20px; width: 460px; height:150px;border-top:#E4E7E9 solid 1px;}
 .messagewindow li{float:left; clear:both; padding:5px 5px; background:#fff;  width: 460px; display: block;}
 .userPic{float:left;width:40px;height:40px;display:inline;margin-left:10px;border:1px solid #ccc;border-radius:3px;}
 .content{float:left;position: relative; padding: 7px;margin-left: 30px;border: 3px solid #D3EDF4;color: #333;background: #D3EDF4;-webkit-border-radius: 10px;-moz-border-radius: 10px;border-radius: 10px;}
